--- a/index.html
+++ b/index.html
@@ -2,69 +2,60 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Archi – Silent AI Guardian</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Archi</title>
   <style>
-    :root {
-      --bg: #000;
-      --text: #fff;
-      --accent: #fff;
-      --button-bg: #fff;
-      --button-text: #000;
-      --link: #66b2ff;
-    }
-
-    * {
-      box-sizing: border-box;
-    }
-
     body {
       margin: 0;
+      padding: 0;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-      background-color: var(--bg);
-      color: var(--text);
+      background-color: #ffffff;
+      color: #111111;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: flex-start;
       min-height: 100vh;
-      text-align: center;
-      padding: 40px 20px 20px;
     }
 
-    .logo-title {
+    .container {
+      text-align: center;
+      padding: 60px 20px 20px;
+      max-width: 500px;
+      width: 100%;
+    }
+
+    .logo {
+      font-size: 2.5rem;
+      font-weight: 700;
       display: flex;
       align-items: center;
-      gap: 12px;
-      font-size: 2.5rem;
-      font-weight: bold;
-      margin-bottom: 1rem;
-    }
-
-    .logo-title img {
-      height: 40px;
+      justify-content: center;
+      gap: 0.5rem;
     }
 
     .tagline {
-      font-size: 1.25rem;
-      margin-bottom: 1rem;
+      font-size: 1.1rem;
+      margin: 12px 0 32px;
     }
 
-    .form-wrapper {
+    iframe {
       width: 100%;
-      max-width: 500px;
-      margin: 0 auto 1.5rem;
+      height: 160px;
+      border: none;
+      overflow: hidden;
     }
 
     footer {
-      font-size: 0.9rem;
-      color: var(--text);
+      margin-top: 40px;
+      font-size: 0.85rem;
+      color: #777;
     }
 
     footer a {
-      color: var(--link);
+      color: #555;
       text-decoration: none;
-      margin: 0 8px;
+      margin: 0 6px;
     }
 
     footer a:hover {
@@ -73,36 +64,34 @@
   </style>
 </head>
 <body>
+  <div class="container">
+    <div class="logo">
+      Archi
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/30/Eye_font_awesome.svg/1024px-Eye_font_awesome.svg.png" alt="Archi Eye" style="height: 28px;"/>
+    </div>
 
-  <div class="logo-title">
-    <span>Archi</span>
-    <img src="logo.png" alt="Archi Logo" onerror="this.style.display='none'" />
+    <div class="tagline">
+      Touch nothing. Archi sees.<br />
+      Join the waitlist below for early access.
+    </div>
+
+    <!-- Tally embed -->
+    <iframe data-tally-src="https://tally.so/embed/wg6bAl?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="200" frameborder="0" marginheight="0" marginwidth="0" title="Archi Waitlist"></iframe>
+    <script>
+      let d = document, w = "https://tally.so/widgets/embed.js";
+      if (!d.querySelector(`script[src="${w}"]`)) {
+        let s = d.createElement("script");
+        s.src = w;
+        s.onload = () => Tally.loadEmbeds();
+        d.body.appendChild(s);
+      }
+    </script>
+
+    <footer>
+      © 2025 Archi AI. All rights reserved.  
+      <a href="/privacy.html">Privacy Policy</a> · 
+      <a href="/terms.html">Terms of Service</a>
+    </footer>
   </div>
-
-  <div class="tagline">
-    <p>Touch nothing. Archi sees.</p>
-    <p>Join the waitlist below for early access.</p>
-  </div>
-
-  <!-- Tally Form Embed -->
-  <div class="form-wrapper">
-    <iframe data-tally-src="https://tally.so/embed/wg6bAl?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1"
-      loading="lazy" width="100%" height="150" frameborder="0" marginheight="0" marginwidth="0"
-      title="Archi Waitlist"></iframe>
-  </div>
-  <script>
-    var d = document, s = d.createElement("script");
-    s.src = "https://tally.so/widgets/embed.js";
-    s.onload = function () { Tally.loadEmbeds(); };
-    d.body.appendChild(s);
-  </script>
-
-  <footer>
-    © 2025 Archi AI. All rights reserved.
-    <br />
-    <a href="/privacy.html">Privacy Policy</a> ·
-    <a href="/terms.html">Terms of Service</a>
-  </footer>
-
 </body>
 </html>
