--- a/index.html
+++ b/index.html
@@ -1,28 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Archi</title>
   <style>
+    :root {
+      --bg-light: #ffffff;
+      --text-light: #111111;
+      --bg-dark: #000000;
+      --text-dark: #ffffff;
+    }
+
     body {
       margin: 0;
       padding: 0;
+      background: var(--bg-light);
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-      background-color: #ffffff;
-      color: #111111;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: flex-start;
       min-height: 100vh;
+      color: var(--text-light);
+      transition: background 0.3s, color 0.3s;
+    }
+
+    body.dark {
+      background: var(--bg-dark);
+      color: var(--text-dark);
     }
 
     .container {
+      padding-top: 80px;
       text-align: center;
-      padding: 60px 20px 20px;
-      max-width: 500px;
       width: 100%;
+      max-width: 600px;
     }
 
     .logo {
@@ -32,46 +45,77 @@
       align-items: center;
       justify-content: center;
       gap: 0.5rem;
+      margin-bottom: 10px;
+    }
+
+    .logo img {
+      height: 32px;
+      filter: invert(0%);
+    }
+
+    body.dark .logo img {
+      filter: invert(100%);
     }
 
     .tagline {
       font-size: 1.1rem;
-      margin: 12px 0 32px;
+      margin-bottom: 32px;
     }
 
     iframe {
       width: 100%;
-      height: 160px;
+      height: 200px;
       border: none;
       overflow: hidden;
     }
 
     footer {
-      margin-top: 40px;
+      margin-top: 80px;
+      padding: 20px;
       font-size: 0.85rem;
-      color: #777;
+      color: inherit;
     }
 
     footer a {
-      color: #555;
-      text-decoration: none;
+      color: inherit;
+      text-decoration: underline;
       margin: 0 6px;
     }
 
-    footer a:hover {
-      text-decoration: underline;
+    .theme-toggle {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      background: none;
+      border: 2px solid currentColor;
+      border-radius: 6px;
+      padding: 6px 12px;
+      cursor: pointer;
+      font-size: 0.85rem;
+    }
+
+    @media (max-width: 500px) {
+      .logo {
+        font-size: 2rem;
+      }
+
+      .tagline {
+        font-size: 1rem;
+      }
     }
   </style>
 </head>
 <body>
+  <button class="theme-toggle" onclick="toggleTheme()">☀ / 🌙</button>
+
   <div class="container">
     <div class="logo">
       Archi
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/30/Eye_font_awesome.svg/1024px-Eye_font_awesome.svg.png" alt="Archi Eye" style="height: 28px;"/>
+      <img src="https://raw.githubusercontent.com/feathericons/feather/master/icons/eye.svg" alt="Eye Logo"/>
     </div>
 
     <div class="tagline">
-      Touch nothing. Archi sees.<br />
+      Touch nothing. Archi sees.<br>
       Join the waitlist below for early access.
     </div>
 
@@ -88,10 +132,21 @@
     </script>
 
     <footer>
-      © 2025 Archi AI. All rights reserved.  
-      <a href="/privacy.html">Privacy Policy</a> · 
-      <a href="/terms.html">Terms of Service</a>
+      © 2025 Archi AI. All rights reserved. ·
+      <a href="/privacy-policy" target="_blank">Privacy Policy</a> ·
+      <a href="/terms-of-service" target="_blank">Terms of Service</a>
     </footer>
   </div>
+
+  <script>
+    const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+    if (prefersDark) {
+      document.body.classList.add('dark');
+    }
+
+    function toggleTheme() {
+      document.body.classList.toggle('dark');
+    }
+  </script>
 </body>
 </html>
