--- a/index.html
+++ b/index.html
@@ -2,70 +2,34 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Archi – Touch nothing. Archi sees.</title>
-  <link rel="icon" href="/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Archi – Early Access</title>
   <style>
-    :root {
-      --bg-light: #ffffff;
-      --text-light: #000000;
-      --bg-dark: #000000;
-      --text-dark: #ffffff;
-    }
-
-    html {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-      transition: background 0.3s, color 0.3s;
-    }
-
     body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
       margin: 0;
-      padding: 2rem;
+      padding: 0;
+      background: #fff;
+      color: #000;
       display: flex;
+      justify-content: center;
+      align-items: center;
       flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
       min-height: 100vh;
-      background-color: var(--bg-light);
-      color: var(--text-light);
     }
 
-    body.dark {
-      background-color: var(--bg-dark);
-      color: var(--text-dark);
-    }
-
-    .toggle {
-      position: absolute;
-      top: 1rem;
-      right: 1rem;
-      border: 2px solid #007aff;
-      border-radius: 0.75rem;
-      padding: 0.2rem 0.6rem;
-      cursor: pointer;
-      background: transparent;
-      font-size: 1.2rem;
-    }
-
-    .logo {
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 0.2rem;
       display: flex;
       align-items: center;
-      gap: 0.4rem;
-      font-size: 2rem;
-      font-weight: bold;
-      margin-top: 4rem;
-      margin-bottom: 1.5rem;
-    }
-
-    .logo svg {
-      width: 28px;
-      height: 28px;
+      gap: 0.5rem;
     }
 
     p {
-      text-align: center;
-      margin: 0.5rem 0;
+      margin: 0.2rem 0;
       font-size: 1.1rem;
+      text-align: center;
     }
 
     form {
@@ -74,85 +38,70 @@
       flex-direction: column;
       align-items: center;
       gap: 1rem;
-      width: 100%;
-      max-width: 400px;
     }
 
     input[type="email"] {
-      padding: 0.8rem 1rem;
+      padding: 0.75rem 1rem;
       font-size: 1rem;
-      border-radius: 0.5rem;
+      width: 250px;
       border: 1px solid #ccc;
-      width: 100%;
+      border-radius: 10px;
+      outline: none;
+      transition: border 0.2s ease;
+    }
+
+    input[type="email"]:focus {
+      border-color: #000;
     }
 
     button {
-      padding: 0.8rem 1.5rem;
-      font-size: 1rem;
-      border: none;
       background-color: #000;
       color: #fff;
-      border-radius: 0.5rem;
+      padding: 0.75rem 1.2rem;
+      border: none;
+      border-radius: 8px;
+      font-size: 1rem;
       cursor: pointer;
-      transition: background 0.2s;
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
     }
 
     button:hover {
-      background-color: #333;
+      opacity: 0.9;
     }
 
-    footer {
+    .footer {
       margin-top: auto;
-      padding: 2rem 0 1rem;
       font-size: 0.8rem;
       text-align: center;
+      padding: 2rem;
+      color: #666;
     }
 
-    a {
-      color: inherit;
-      text-decoration: underline;
-    }
-
-    a:hover {
-      text-decoration: none;
+    @media (max-width: 500px) {
+      input[type="email"] {
+        width: 80vw;
+      }
     }
   </style>
 </head>
 <body>
-  <div class="toggle" onclick="toggleMode()">☀️ / 🌙</div>
-
-  <div class="logo">
-    <span>Archi</span>
-    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-      stroke-linecap="round" stroke-linejoin="round">
-      <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8S1 12 1 12z"></path>
-      <circle cx="12" cy="12" r="3"></circle>
-    </svg>
-  </div>
-
+  <h1>Archi <span>👁️</span></h1>
   <p>Touch nothing. Archi sees.</p>
   <p>Join the waitlist below for early access.</p>
 
-  <form action="https://tally.so/r/wg6bAl" method="POST" target="_blank">
+  <form action="https://YOUR-FORM-HANDLER-URL" method="POST">
     <input type="email" name="email" placeholder="Email" required />
     <button type="submit">Submit →</button>
   </form>
 
-  <footer>
-    © 2025 Archi AI. All rights reserved. ·
-    <a href="/privacy.html">Privacy Policy</a> ·
-    <a href="/terms.html">Terms of Service</a>
-  </footer>
-
-  <script>
-    // System preference on load
-    const prefersDark = window.matchMedia("(prefers-color-scheme: dark)").matches;
-    if (prefersDark) document.body.classList.add("dark");
-
-    function toggleMode() {
-      document.body.classList.toggle("dark");
-    }
-  </script>
+  <!-- Optional footer -->
+  <!--
+  <div class="footer">
+    © 2025 Archi AI. All rights reserved.
+  </div>
+  -->
 </body>
 </html>
 
